# 4everbot

./: .env.dist  .gitignore  pyproject.toml  readme.md
backend/: app.py
backend/bot/handlers/: start.py
backend/bot/keyboards/: ikb.py
backend/bot/middlewares/: __init__.py
backend/bot/middlewares/outer/: user.py
backend/core/: config.py  loader.py
backend/routes/: __init__.py  webhook.py
tests/: test_gpt.py
webapp/: package-lock.json  package.json  vite.config.js
webapp/src/: App.vue  main.js
webapp/src/assets/: base.css
webapp/src/assets/icons/: add-photo-svg.vue  back-svg.vue  calendar-svg.vue  person-svg.vue  stars-svg.vue
webapp/src/components/: EpitaphPage.vue  FinalPage.vue  MainPage.vue  ProgressBar.vue
webapp/src/stores/: pages.js  questions.js
