[tool.poetry]
name = "gagarin-bot"
version = "0.1.0"
description = ""
authors = ["DIMFLIX <112165977+DIMFLIX-OFFICIAL@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
aiogram = "^3.4.1"
msgspec = "^0.18.6"
fastapi = "^0.110.1"
unicorn = "^2.0.1.post1"
uvicorn = "^0.29.0"
yandex-chain = "^0.0.6"
environs = "^11.0.0"
yagpt-py = "^0.0.5"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
